tests/codegen/fail/union/struct_no_fields.stderr
error: GraphQL union expects at least one union variant
 --> fail/union/struct_no_fields.rs:4:1
  |
4 | struct Character;
  | ^^^^^^^^^^^^^^^^^
  |
  = note: https://spec.graphql.org/October2021#sec-Unions
